update bet closed

--- a/src/game/components/TableBetV2/index.module.scss
+++ b/src/game/components/TableBetV2/index.module.scss
@@ -51,8 +51,8 @@
 
     .closed {
         --translate-x: 0;
-        --translate-y: 1rem;
-        --scale: 0.8;
+        --translate-y: 0;
+        --scale: 0.75;
         --opacity: 0.6;
         --rotate-x: 46deg;
     }
