--- a/src/game/components/HowToPlayContent/Items/SideBet/CardTable/style.module.scss
+++ b/src/game/components/HowToPlayContent/Items/SideBet/CardTable/style.module.scss
@@ -1,5 +1,3 @@
-
-
 .container {
     display: flex;
     position: relative;
@@ -8,8 +6,6 @@
     gap: 1rem;
 }
 
-
-
 .item {
     display: flex;
     flex-direction: column;
@@ -17,4 +13,12 @@
     height: 100%;
     gap: 1rem;
     justify-content: space-around;
+    text-transform: uppercase;
+}
+
+:global(.desktop),
+:global(.mobile-landscape) {
+    .item {
+        transform: scale(0.5);
+    }
 }
