--- a/src/game/components/TableBetV2/ButtonBet/chip-position.scss
+++ b/src/game/components/TableBetV2/ButtonBet/chip-position.scss
@@ -1,4 +1,49 @@
-// {
+.dragon {
+    .slot-chip {
+        left: 20%;
+    }
+}
 
-//     // transform: rotateY(0deg);
-// }
+.tiger {
+    .slot-chip {
+        left: 80%;
+    }
+}
+
+.super-wild {
+    .slot-chip {
+        top: 65%;
+        left: 20%;
+    }
+}
+
+.tie {
+    .slot-chip {
+        top: 35%;
+        left: 80%;
+    }
+}
+
+.dragon-wild {
+    .slot-chip {
+        left: 70%;
+    }
+}
+
+.dragon-pair {
+    .slot-chip {
+        left: 70%;
+    }
+}
+
+.tiger-wild {
+    .slot-chip {
+        left: 30%;
+    }
+}
+
+.tiger-pair {
+    .slot-chip {
+        left: 30%;
+    }
+}
