--- a/src/game/components/HowToPlayContent/Items/SideBet/CardTable/style.module.scss
+++ b/src/game/components/HowToPlayContent/Items/SideBet/CardTable/style.module.scss
@@ -14,6 +14,15 @@
     gap: 1rem;
     justify-content: space-around;
     text-transform: uppercase;
+    & > div {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 15%;
+    }
 }
 
 :global(.desktop),
