--- a/src/game/components/TableBetV2/index.module.scss
+++ b/src/game/components/TableBetV2/index.module.scss
@@ -279,11 +279,17 @@
 }
 
 .slot-card {
+    // pointer-events: none;
+    // position: absolute;
+    // top: 50%;
+    // left: 50%;
+    // width: 100%;
+    // height: 100%;
+    // transform: translate(-50%, -50%);
+
     pointer-events: none;
     position: absolute;
-    top: 50%;
-    left: 50%;
     width: 100%;
     height: 100%;
-    transform: translate(-50%, -50%);
+    inset: 0;
 }
