--- a/src/game/components/TableBetV2/ButtonBet/styles.module.scss
+++ b/src/game/components/TableBetV2/ButtonBet/styles.module.scss
@@ -248,23 +248,9 @@
     }
 }
 
-.table-win-blink {
-    animation: tableWinBlink 0.75s reverse ease-in-out;
+:global :local(.table-win-blink) {
+    animation: buttonWinBlinkBrightness 0.75s reverse ease-in-out;
     animation-iteration-count: infinite;
-}
-
-@keyframes tableWinBlink {
-    0% {
-        filter: brightness(1);
-    }
-
-    50% {
-        filter: brightness(1.3);
-    }
-
-    100% {
-        filter: brightness(1);
-    }
 }
 
 .table-lose-opacity {
