--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -7,10 +7,10 @@
     // setting streaming scale in portrait
     --streaming-scale-portrait: 1.4;
     --height-overlay-streaming-portrait: 4rem;
-    --width-overlay-streaming-landscape: 10rem;
+    --width-overlay-streaming-landscape: 4rem;
     --height-overlay-streaming-landscape: 8rem;
 
-    --streaming-background: #100b07;
+    --streaming-background: #452204; // #100b07;
 
     // portrait, streaming ke bawah
     --streaming-color-1: linear-gradient(180deg, #ff7401 0%, #452204 40.22%, #0b0500 100%);
