update streaming landscape

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -26,8 +26,8 @@
     // landscape, bawah
     --streaming-color-6: linear-gradient(0deg, #0e0901 0%, #1c1303 4rem, transparent 100%);
 
-    --streaming-color-7: linear-gradient(to right, #0e0901 0%, #1c1303 100%);
-    --streaming-color-8: linear-gradient(to left, #0e0901 0%, #1c1303 100%);
+    --streaming-color-7: linear-gradient(to left, #1c1303 0%, #0e0901 14rem);
+    --streaming-color-8: linear-gradient(to right, #1c1303 0%, #0e0901 14rem);
 
     --bg-footer: transparent; // rgba(2, 10, 20, 0.5);
 
