--- a/src/game/components/TableBet/ButtonBet/BetNumber/styles.module.scss
+++ b/src/game/components/TableBet/ButtonBet/BetNumber/styles.module.scss
@@ -10,7 +10,7 @@
 }
 
 .button-name {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     font-weight: 800;
     color: #583e11;
 }
@@ -18,5 +18,9 @@
 .payout {
     color: rgba(88, 62, 17, 0.36);
     font-size: 0.8rem;
-    font-weight: 700;
+    font-weight: 600;
+}
+
+.text-red {
+    color: #e40044;
 }
