--- a/src/game/components/TableBet/styles.module.scss
+++ b/src/game/components/TableBet/styles.module.scss
@@ -5,9 +5,7 @@
     justify-items: center;
     align-items: center;
 
-    grid-template-columns: repeat(40, minmax(0, 1fr));
-
-    gap: 0.1rem;
+    gap: 0.15rem;
 
     container: table-bet / size;
 }
@@ -19,17 +17,17 @@
         --scale: 1;
         --opacity: 1;
 
-        --scale-close: 0.85;
-        --opacity-close: 0.75;
-
         height: 100%;
 
-        grid-template-rows: repeat(5, 7fr) repeat(2, 6fr);
+        grid-template-columns: repeat(6, minmax(0px, 1fr));
+        grid-template-rows: repeat(9, minmax(0px, 1fr));
 
         transform: translateX(var(--translate-x)) translateY(var(--translate-y)) scale(var(--scale));
         opacity: var(--opacity);
         transform-origin: bottom;
-        transition: all 0.75s;
+        transition:
+            transform 0.75s,
+            opacity 0.75s;
 
         &.opened {
             --translate-x: 0;
@@ -41,9 +39,21 @@
         &.closed {
             --translate-x: 0;
             --translate-y: 0;
-            --scale: 0.85;
+            --scale: 1;
             --opacity: 1;
         }
+    }
+
+    .container-multi-cols {
+        grid-row: 2 / span 6;
+        grid-column: 6;
+
+        width: 100%;
+        height: 100%;
+
+        display: flex;
+        flex-direction: column;
+        gap: 0.15rem;
     }
 }
 
@@ -58,17 +68,25 @@
         --opacity: 1;
         --rotate-x: 0;
 
+        --scale-close: 0.5;
+        --opacity-close: 0.5;
+        --translate-x-close: 0;
+        --translate-y-close: 7rem;
+        --rotate-x-close: 46deg;
+
         height: 100%;
         padding-top: 2rem;
 
-        grid-template-rows: repeat(7, 1fr);
+        grid-template-columns: repeat(9, minmax(0px, 1fr));
+        grid-template-rows: repeat(6, minmax(0px, 1fr));
 
         transform: translateX(var(--translate-x)) translateY(var(--translate-y)) scale(var(--scale))
             perspective(var(--perspective)) rotateX(var(--rotate-x));
         opacity: var(--opacity);
-
         transform-origin: bottom;
-        transition: all 0.75s;
+        transition:
+            transform 0.75s,
+            opacity 0.75s;
 
         --scale-close: 0.7;
         --opacity-close: 0.9;
@@ -95,5 +113,16 @@
                 --opacity: 1;
             }
         }
+    }
+
+    .container-multi-cols {
+        grid-column: 2 / span 6;
+        grid-row: 6;
+
+        width: 100%;
+        height: 100%;
+
+        display: flex;
+        gap: 0.15rem;
     }
 }
