update color variable

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -24,7 +24,7 @@
     // landscape, kanan
     --streaming-color-5: linear-gradient(to left, #1c1303 0%, transparent 100%);
     // landscape, bawah
-    --streaming-color-6: linear-gradient(0deg, #0e0901 0%, #1c1303 4rem, transparent 100%);
+    --streaming-color-6: linear-gradient(0deg, #1c1303 0%, #1c1303 4rem, transparent 100%);
 
     --streaming-color-7: linear-gradient(to left, #1c1303 0%, #0e0901 14rem);
     --streaming-color-8: linear-gradient(to right, #1c1303 0%, #0e0901 14rem);
