--- a/src/game/components/HowToPlayContent/Items/BetDescription/CardTable/style.module.scss
+++ b/src/game/components/HowToPlayContent/Items/BetDescription/CardTable/style.module.scss
@@ -14,6 +14,7 @@
     gap: 1rem;
     justify-content: space-around;
     text-transform: uppercase;
+    text-align: center;
     & > div {
         position: relative;
         width: 100%;
@@ -21,7 +22,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-left: 15%;
+        margin-left: -1rem;
+        & > div {
+            width: unset !important;
+        }
     }
 }
 
