--- a/src/game/components/HowToPlayContent/Items/DTWCard/CardValueTable/styles.module.scss
+++ b/src/game/components/HowToPlayContent/Items/DTWCard/CardValueTable/styles.module.scss
@@ -1,6 +1,6 @@
 .table-wrapper {
     width: 100%;
-    overflow-x: hidden;
+    overflow-x: auto;
     border-radius: 0.5rem 0.5rem;
     background-color: #000;
     border: 0.06rem solid #4c4d66;
@@ -12,11 +12,18 @@
 
     font-size: 1rem;
     font-weight: 600;
-
     border: 0.06rem solid #4c4d66;
+    border-radius: 0.5rem 0.5rem;
 
-    thead tr {
-        background-color: #2c2d3f;
+    // border: 0.06rem solid #4c4d66;
+
+    tr > td:nth-child(1) {
+        background-color: #2b2d3d;
+        max-width: 4rem !important;
+    }
+
+    tr td {
+        background-color: #161623;
     }
 
     th,
@@ -25,32 +32,37 @@
         padding: 0 0.5rem;
         white-space: nowrap;
         height: 2.5rem;
+        text-align: center;
+    }
+
+    td {
+        // max-width: 1.5rem;
+        p {
+            display: block;
+            height: fit-content;
+            word-wrap: break-word;
+            white-space: normal;
+        }
+    }
+
+    th:nth-child(1) {
+        p {
+            padding: 0.72rem 0;
+            display: block;
+            height: fit-content;
+            word-wrap: break-word;
+            white-space: normal;
+            width: 3rem;
+        }
+    }
+
+    td:nth-child(1) {
+        width: 5%;
     }
 
     th {
         font-size: 1rem;
         font-weight: 600;
-    }
-
-    td:nth-child(1) {
-        max-width: 3%;
-        text-align: center;
-        p {
-            display: block;
-            height: fit-content;
-            word-wrap: break-word;
-            white-space: normal;
-            width: 100%;
-        }
-    }
-    td:nth-child(2) {
-        p {
-            display: block;
-            height: fit-content;
-            word-wrap: break-word;
-            white-space: normal;
-            width: 100%;
-        }
     }
 
     tr.win {
@@ -62,8 +74,7 @@
     }
 
     td.card {
-        height: 5.5rem;
-        padding: 0.5rem;
+        height: 6.5rem;
     }
 }
 
