--- a/src/game/components/ResultDTWildTransaction/styles.module.scss
+++ b/src/game/components/ResultDTWildTransaction/styles.module.scss
@@ -7,7 +7,7 @@
     display: flex;
     width: 100%;
     height: fit-content;
-    padding: 1.2rem 1.2rem;
+    // padding: 1.2rem 1.2rem;
     box-sizing: border-box;
     flex-direction: column;
     justify-content: space-between;
