--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -6,28 +6,37 @@
 
     // setting streaming scale in portrait
     --streaming-scale-portrait: 1.1;
-    --height-overlay-streaming-portrait: 2rem;
+    --height-overlay-streaming-portrait: 4rem;
     --width-overlay-streaming-landscape: 4rem;
     --height-overlay-streaming-landscape: 8rem;
 
     --streaming-background: #1c1303;
 
     // portrait, streaming ke bawah
-    --streaming-color-1: linear-gradient(180deg, #854c07 0%, #533909 40.22%, #0e0901 100%);
+    --streaming-color-1: linear-gradient(180deg, #a36213 0%, #0e0901 100%);
     // portrait, blur di bawah streaming 1
-    --streaming-color-2: linear-gradient(180deg, transparent 0%, #854c07 100%);
+    --streaming-color-2: linear-gradient(180deg, transparent 0%, #a36213 100%);
     // portrait, blur di bawah streaming 2
-    --streaming-color-3: linear-gradient(180deg, transparent 0%, #854c07 100%);
+    --streaming-color-3: linear-gradient(180deg, transparent 0%, #a36213 100%);
 
     // landscape, kiri
-    --streaming-color-4: linear-gradient(to right, #1c1303 0%, transparent 100%);
+    --streaming-color-4: linear-gradient(
+        to right,
+        var(--streaming-background) 0%,
+        transparent 100%
+    );
     // landscape, kanan
-    --streaming-color-5: linear-gradient(to left, #1c1303 0%, transparent 100%);
+    --streaming-color-5: linear-gradient(to left, var(--streaming-background) 0%, transparent 100%);
     // landscape, bawah
-    --streaming-color-6: linear-gradient(0deg, #1c1303 0%, #1c1303 4rem, transparent 100%);
+    --streaming-color-6: linear-gradient(
+        0deg,
+        var(--streaming-background) 0%,
+        var(--streaming-background) 4rem,
+        transparent 100%
+    );
 
-    --streaming-color-7: linear-gradient(to left, #1c1303 0%, #0e0901 14rem);
-    --streaming-color-8: linear-gradient(to right, #1c1303 0%, #0e0901 14rem);
+    --streaming-color-7: linear-gradient(to left, var(--streaming-background) 0%, #0e0901 14rem);
+    --streaming-color-8: linear-gradient(to right, var(--streaming-background) 0%, #0e0901 14rem);
 
     --bg-footer: transparent; // rgba(2, 10, 20, 0.5);
 
