--- a/src/game/components/TableBet/styles.module.scss
+++ b/src/game/components/TableBet/styles.module.scss
@@ -5,9 +5,18 @@
     justify-items: center;
     align-items: center;
 
-    gap: 0.15rem;
-
     container: table-bet / size;
+}
+
+.container-multi-cols {
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+.table-bet,
+.container-multi-cols {
+    gap: 0.1rem;
 }
 
 :global(.mobile-portrait) {
@@ -48,12 +57,7 @@
         grid-row: 2 / span 6;
         grid-column: 6;
 
-        width: 100%;
-        height: 100%;
-
-        display: flex;
         flex-direction: column;
-        gap: 0.15rem;
     }
 }
 
@@ -118,11 +122,5 @@
     .container-multi-cols {
         grid-column: 2 / span 6;
         grid-row: 6;
-
-        width: 100%;
-        height: 100%;
-
-        display: flex;
-        gap: 0.15rem;
     }
 }
