--- a/src/game/components/Card/RenderCard2/syles.module.scss
+++ b/src/game/components/Card/RenderCard2/syles.module.scss
@@ -1,7 +1,6 @@
 .container {
     position: relative;
-    height: 2rem;
-    width: 1.515rem;
+    aspect-ratio: 0.76;
 }
 
 .container > svg {
@@ -11,10 +10,10 @@
 
 .value {
     position: absolute;
-    top: 0.1rem;
-    left: 0.2rem;
-    font-weight: 400;
+    top: 0.1em;
+    left: 0.1em;
     font-weight: 700;
     text-transform: uppercase;
     white-space: nowrap;
+    font-size: 0.6em;
 }
