--- a/src/game/components/MainArea/styles.module.scss
+++ b/src/game/components/MainArea/styles.module.scss
@@ -59,6 +59,34 @@
         justify-content: flex-start;
         align-items: center;
     }
+
+    .container-center-board {
+        display: flex;
+        flex-direction: column;
+        gap: 0.2rem;
+        justify-content: space-between;
+        width: 100%;
+        height: 100%;
+    }
+
+    .landscape-top-board {
+        flex-basis: 1;
+        display: flex;
+        flex-direction: column;
+        gap: 0.2rem;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        padding-bottom: 0.8rem;
+
+        &.close {
+            animation: landscape-board-hide 0.35s linear forwards;
+        }
+
+        &.open {
+            animation: landscape-board-show 0.35s linear forwards;
+        }
+    }
 }
 
 .panel-history {
@@ -67,4 +95,26 @@
 
 .panel-bet {
     flex: 1;
+}
+
+@keyframes landscape-board-show {
+    0% {
+        transform: translateY(-100%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+
+@keyframes landscape-board-hide {
+    0% {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(-100%);
+        opacity: 0;
+    }
 }
