--- a/public/loading/styles/loading.css
+++ b/public/loading/styles/loading.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100vw;
     height: calc(var(--vh, 1vh) * 100);
-    background-image: url('../img/flashscreen.png');
+    background-image: url('../img/flashscreen.webp');
     background-repeat: no-repeat;
     background-size: auto 100%;
     background-position: center;
