--- a/src/common/menus/Items/Payout/PayoutContent/TableMenuPayout/styles.module.scss
+++ b/src/common/menus/Items/Payout/PayoutContent/TableMenuPayout/styles.module.scss
@@ -21,10 +21,7 @@
 
     th,
     td {
-        padding-left: 0.6rem;
-        padding-right: 0.6rem;
-
-        height: 2.5rem;
+        padding: 0.8rem 0.6rem;
 
         &.bet-child {
             padding-left: 1.6rem;
