--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -77,6 +77,8 @@
 
     --border-total-bet-bg-1: rgba(255, 255, 255, 0);
     --border-total-bet-bg-2: rgba(255, 255, 255, 0.3);
+
+    --top-winner-height: 1.6rem;
 }
 
 .app {
