--- a/src/common/components/FooterV2/styles.module.scss
+++ b/src/common/components/FooterV2/styles.module.scss
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    line-height: 1.5;
 }
 
 :global(.mobile-portrait) {
