--- a/src/common/components/UserInfo/styles.module.scss
+++ b/src/common/components/UserInfo/styles.module.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
 
-    gap: 0.2rem;
+    // gap: 0.2rem;
 
     &.right {
         padding-right: 0.8rem;
