fix in landscape

--- a/src/common/layouts/v1.2/styles.module.scss
+++ b/src/common/layouts/v1.2/styles.module.scss
@@ -47,6 +47,10 @@
 
 :global(.desktop),
 :global(.mobile-landscape) {
+    .main-wrapper {
+        position: relative;
+    }
+
     .main {
         height: calc(100% + var(--height-footer));
     }
