--- a/src/common/components/Video/styles.module.scss
+++ b/src/common/components/Video/styles.module.scss
@@ -10,3 +10,15 @@
     width: 100%;
     height: 100%;
 }
+
+.off {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 0.8rem;
+    text-align: center;
+    text-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.5);
+}
