--- a/src/common/components/Video/WebStreamError/styles.module.scss
+++ b/src/common/components/Video/WebStreamError/styles.module.scss
@@ -8,8 +8,5 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.text {
-    font-size: 1.2rem;
+    background-color: #000;
 }
