--- a/src/common/components/ButtonAction/styles.module.scss
+++ b/src/common/components/ButtonAction/styles.module.scss
@@ -42,7 +42,6 @@
 }
 
 .text {
-    font-size: 0.9rem;
     font-weight: 400;
     color: var(--gray);
     white-space: nowrap;
@@ -72,7 +71,13 @@
     }
 }
 
-:global(.desktop),
+:global(.mobile-portrait),
+:global(.mobile-landscape) {
+    .text {
+        font-size: 0.9rem;
+    }
+}
+
 :global(.mobile-landscape) {
     .button-action {
         &.disapear {
@@ -82,5 +87,18 @@
 
     .text {
         width: calc(100% + 1.2rem);
+    }
+}
+
+:global(.desktop) {
+    .button-action {
+        &.disapear {
+            --opacity: 0;
+        }
+    }
+
+    .text {
+        font-size: 1rem;
+        width: calc(100% + 1.6rem);
     }
 }
