--- a/src/common/components/Game/styles.module.scss
+++ b/src/common/components/Game/styles.module.scss
@@ -4,6 +4,7 @@
         position: relative;
         width: 100%;
         height: 100%;
+        font-size: 1rem;
 
         &.box {
             position: absolute;
@@ -26,5 +27,7 @@
         height: var(--height-game-px);
         transform: translateX(-50%) translateY(-50%);
         overflow: hidden;
+
+        font-size: 1.5rem;
     }
 }
