--- a/src/common/components/Version/styles.module.scss
+++ b/src/common/components/Version/styles.module.scss
@@ -1,9 +1,24 @@
 .version {
     position: absolute;
-    top: 0.1rem;
-    right: 0.2rem;
+
     z-index: var(--layer-streaming);
 
-    font-size: 0.4rem;
     font-weight: 800;
+}
+
+:global(.mobile-portrait),
+:global(.mobile-landscape) {
+    .version {
+        top: 0.1rem;
+        right: 0.2rem;
+        font-size: 0.4rem;
+    }
+}
+
+:global(.desktop) {
+    .version {
+        bottom: 0.2rem;
+        right: 0.2rem;
+        font-size: 1rem;
+    }
 }
