Test Update Desktop

--- a/src/game/components/MainArea/styles.module.scss
+++ b/src/game/components/MainArea/styles.module.scss
@@ -32,6 +32,7 @@
 :global(.mobile-landscape) {
     .main-area {
         padding-bottom: 0.8rem;
+        padding-top: 2rem;
 
         flex-direction: column-reverse;
         gap: 2rem;
