--- a/src/common/components/Alerts/Message/styles.module.scss
+++ b/src/common/components/Alerts/Message/styles.module.scss
@@ -52,3 +52,9 @@
     text-transform: uppercase;
     text-shadow: 0px 0.1rem 0.1rem rgba(0, 0, 0, 0.3);
 }
+
+:global(.desktop) {
+    .message {
+        top: 48rem;
+    }
+}
