--- a/src/common/components/ButtonAction/styles.module.scss
+++ b/src/common/components/ButtonAction/styles.module.scss
@@ -101,4 +101,8 @@
         font-size: 1rem;
         width: calc(100% + 1.6rem);
     }
+
+    .icon:hover {
+        background-color: rgba(94, 94, 94, 0.3);
+    }
 }
