--- a/src/common/components/Streaming/styles.module.scss
+++ b/src/common/components/Streaming/styles.module.scss
@@ -182,4 +182,19 @@
         background: var(--streaming-background); // var(--streaming-color-6);
         mask-image: linear-gradient(transparent, #000);
     }
+
+    .top-gradient {
+        --color: 0, 0, 0;
+        // --rem-migration-size: 7.46875px;
+        // height: calc(var(--rem-migration-size) * 12.5);
+
+        background: linear-gradient(-11.3deg, transparent 73%, rgba(var(--color), 0.5) 89%),
+            linear-gradient(11.3deg, transparent 73%, rgba(var(--color), 0.5) 89%);
+        height: 16rem;
+        left: 0;
+        pointer-events: none;
+        position: absolute;
+        top: 0;
+        width: 100%;
+    }
 }
