--- a/src/game/components/MainAreaDesktop/styles.module.scss
+++ b/src/game/components/MainAreaDesktop/styles.module.scss
@@ -1,5 +1,7 @@
 .container {
     width: 100%;
+    padding-left: 2rem;
+    padding-right: 2rem;
     display: flex;
     gap: 4rem;
 }
@@ -11,5 +13,8 @@
 
 .left,
 .right {
-    flex: 1;
+    width: 47rem;
+    flex-shrink: 0;
+    flex-grow: 0;
+    overflow: hidden;
 }
